--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# H2 database settings
+spring.datasource.url=jdbc:h2:mem:library
+spring.datasource.username=admin
+spring.datasource.password=password
 
+# JPA settings
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+
+# Security settings
+#spring.security.gebruiker.name=admin
+#spring.security.gebruiker.password=admin
